apps/home-automation/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: home-automation
labels:
  app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
        app.kubernetes.io/name: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:2026.1.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8123
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: homeassistant-config
